package ru.nsu.aeliseev2.task221;

/**
 * Represents an order for one pizza.
 *
 * @param id The unique (per launch) order ID.
 */
public record Order(int id) {
}